<?xml version="1.0"?>
<package format="2">

  <name>rtt_controllers</name>
  <version>1.0.0</version>
  <description>The rtt_controllers package</description>
  <maintainer email="kelleherjdaniel@gmail.com">dan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rtt_tools</depend>
  <depend>rtt_trajectory_generators</depend>
  <depend>rtt</depend>
  <depend>rtt_ros</depend>
  <depend>rtt_roscomm</depend>
  <depend>rtt_rosclock</depend>
  <depend>rtt_rosnode</depend>
  <depend>orocos_kdl</depend>
  <depend>ros_cpp</depend>
  <depend>trac_ik_lib</depend>
  <depend>eigen_conversions</depend>
  <depend>kdl_conversions</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_tf</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
    </rtt_ros>
  </export>

</package>
