<?xml version="1.0"?>
<package format="2">

  <name>rtt_gazebo_interface</name>
  <version>1.0.0</version>
  <description>The rtt_gazebo_interface package</description>
  <maintainer email="kelleherjdaniel@gmail.com">dan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtt_tools</depend>
  <depend>rtt</depend>
  <depend>rtt_ros</depend>
  <depend>rtt_rosnode</depend>
  <depend>orocos_kdl</depend>
  <depend>ros_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <rtt_ros>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_tf</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
    </rtt_ros>
  </export>

</package>
