<?xml version="1.0"?>
<package>

  <name>rtt_serial_arm_controllers</name>
  <version>1.0.0</version>
  <description>The rtt_serial_arm_controllers package</description>
  <maintainer email="kelleherjdaniel@gmail.com">dan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rtt_tools</run_depend>
  <run_depend>rtt_trajectory_generators</run_depend>
  <run_depend>rtt_controllers</run_depend>
  <run_depend>rtt_gazebo_interface</run_depend>

 <export>
   <metapackage/>
 </export>

</package>
