<?xml version="1.0"?>
<package format="2">

  <name>rtt_tools</name>
  <version>1.0.0</version>
  <description>The rtt_tools package</description>
  <maintainer email="kelleherjdaniel@gmail.com">dan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>orocos_kdl</depend>
  <depend>ros_cpp</depend>
  <depend>trac_ik_lib</depend>
  <depend>rtt_ros</depend>
  <depend>rtt_rosparam</depend>
  <depend>rtt_rosnode</depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_rosclock</plugin_depend>
      <plugin_depend>rtt_tf</plugin_depend>
      <plugin_depend>rtt_rospack</plugin_depend>
    </rtt_ros>
  </export>

</package>
